--- a/Prepare_the_dataset.ipynb
+++ b/Prepare_the_dataset.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/yoshih8/recipes/blob/main/Prepare_the_dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -13,54 +13,58 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "cfce8dcb",
       "metadata": {
         "id": "cfce8dcb"
       },
       "outputs": [],
       "source": [
-        "pip install torchvision"
-      ],
-      "id": "cfce8dcb"
+        "pip install torchvision\n",
+        "\n",
+        "\n",
+        "test"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "E_ztvTz71QZa",
       "metadata": {
         "id": "E_ztvTz71QZa"
       },
       "outputs": [],
       "source": [
         "pip install --ignore-installed Pillow==9.3.0"
-      ],
-      "id": "E_ztvTz71QZa"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "600285c5",
       "metadata": {
         "id": "600285c5"
       },
       "outputs": [],
       "source": [
         "pip install datasets"
-      ],
-      "id": "600285c5"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "d6f6f619",
       "metadata": {
         "id": "d6f6f619"
       },
       "outputs": [],
       "source": [
         "pip install diffusers"
-      ],
-      "id": "d6f6f619"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "1SOu_evlySXi",
       "metadata": {
         "id": "1SOu_evlySXi"
       },
@@ -68,12 +72,12 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
-      ],
-      "id": "1SOu_evlySXi"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "04f86e8b",
       "metadata": {
         "id": "04f86e8b"
       },
@@ -109,22 +113,22 @@
         "print(\"Random Seed: \", manualSeed)\n",
         "random.seed(manualSeed)\n",
         "torch.manual_seed(manualSeed)\n"
-      ],
-      "id": "04f86e8b"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "b6c11dda",
       "metadata": {
         "id": "b6c11dda"
       },
       "source": [
         "# Prepare dataset"
-      ],
-      "id": "b6c11dda"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "57300021",
       "metadata": {
         "id": "57300021"
       },
@@ -185,22 +189,22 @@
         "            image = self.transform(image)\n",
         "\n",
         "        return image"
-      ],
-      "id": "57300021"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "db8748c2",
       "metadata": {
         "id": "db8748c2"
       },
       "source": [
         "# Prepare training dataset"
-      ],
-      "id": "db8748c2"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "5bbfdef0",
       "metadata": {
         "id": "5bbfdef0"
       },
@@ -305,33 +309,38 @@
         "grid_images=vutils.make_grid(real_batch.to(device)[:64], nrow=8, padding=2, normalize=True)\n",
         "plt.imshow(np.transpose(grid_images.cpu(),(1,2,0)))\n",
         "plt.show()"
-      ],
-      "id": "5bbfdef0"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "dataset.ref.iloc[:,0]"
-      ],
+      "execution_count": null,
+      "id": "7DGOi-rR0aoh",
       "metadata": {
         "id": "7DGOi-rR0aoh"
       },
-      "id": "7DGOi-rR0aoh",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "dataset.ref.iloc[:,0]"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Create a list which includes the all images we selected."
-      ],
+      "id": "OUzvqv_NlJQc",
       "metadata": {
         "id": "OUzvqv_NlJQc"
       },
-      "id": "OUzvqv_NlJQc"
+      "source": [
+        "Create a list which includes the all images we selected."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "7h0gB2kYhfPr",
+      "metadata": {
+        "id": "7h0gB2kYhfPr"
+      },
+      "outputs": [],
       "source": [
         "all_images = []\n",
         "for idx in range(0, number_of_images):\n",
@@ -339,49 +348,49 @@
         "\n",
         "print(all_images)\n",
         "print(len(all_images))"
-      ],
-      "metadata": {
-        "id": "7h0gB2kYhfPr"
-      },
-      "id": "7h0gB2kYhfPr",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Shuffle the images in this list"
-      ],
+      "id": "vaeUp6nElHUO",
       "metadata": {
         "id": "vaeUp6nElHUO"
       },
-      "id": "vaeUp6nElHUO"
+      "source": [
+        "Shuffle the images in this list"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "random.shuffle(all_images)  # randomly shuffles the ordering of filenames. random seed = 999\n",
-        "print(all_images)"
-      ],
+      "execution_count": null,
+      "id": "f4v2Bv8Ze-2H",
       "metadata": {
         "id": "f4v2Bv8Ze-2H"
       },
-      "id": "f4v2Bv8Ze-2H",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "random.shuffle(all_images)  # randomly shuffles the ordering of filenames. random seed = 999\n",
+        "print(all_images)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Split the dataset into train and test dataset**"
-      ],
+      "id": "LvyyCdmolBhc",
       "metadata": {
         "id": "LvyyCdmolBhc"
       },
-      "id": "LvyyCdmolBhc"
+      "source": [
+        "**Split the dataset into train and test dataset**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "IVjYwg8BlAKe",
+      "metadata": {
+        "id": "IVjYwg8BlAKe"
+      },
+      "outputs": [],
       "source": [
         "train_dataset = 0.5\n",
         "\n",
@@ -397,26 +406,26 @@
         "\n",
         "print(len(train_images))\n",
         "print(len(test_images))"
-      ],
-      "metadata": {
-        "id": "IVjYwg8BlAKe"
-      },
-      "id": "IVjYwg8BlAKe",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Store the train and test dataset into specific folders."
-      ],
+      "id": "PBeG4iAAmdQQ",
       "metadata": {
         "id": "PBeG4iAAmdQQ"
       },
-      "id": "PBeG4iAAmdQQ"
+      "source": [
+        "Store the train and test dataset into specific folders."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "FX6urPznmcoz",
+      "metadata": {
+        "id": "FX6urPznmcoz"
+      },
+      "outputs": [],
       "source": [
         "import shutil\n",
         "\n",
@@ -435,35 +444,29 @@
         "\n",
         "for id2 in range(0, len(test_images)):   # copy the test images into the folder\n",
         "    shutil.copy(os.path.join(dataset.root_dir, test_images[id2] + '.png'), folder_name_test)"
-      ],
-      "metadata": {
-        "id": "FX6urPznmcoz"
-      },
-      "id": "FX6urPznmcoz",
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "kXwxlWOPwsnK",
+      "metadata": {
+        "id": "kXwxlWOPwsnK"
+      },
+      "outputs": [],
       "source": [
         "os.path.join(dataset.root_dir, test_images[2] + '.png')\n",
         "\n",
         "print(sum(os.path.isfile(os.path.join(folder_name_train, name)) for name in os.listdir(folder_name_train)))\n",
         "print(sum(os.path.isfile(os.path.join(folder_name_test, name)) for name in os.listdir(folder_name_test)))"
-      ],
-      "metadata": {
-        "id": "kXwxlWOPwsnK"
-      },
-      "id": "kXwxlWOPwsnK",
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
